src-tauri/tests/snapshots/pipeline_scenarios__user_prompt_with_pasted_range_mid_surrogate.snap
---
source: tests/pipeline_scenarios.rs
expression: run_normalized(msgs)
---
- role: user
  id: msg-1
  content_length: 2
  content:
    - type: text
      text: "看 😀😀 "
    - type: pasted-text
      text_length: 2
      text_preview: ok
  status: ~
  streaming: ~
