src-tauri/tests/snapshots/pipeline_scenarios__user_prompt_with_repeated_file_mention.snap
---
source: tests/pipeline_scenarios.rs
expression: run_normalized(msgs)
---
- role: user
  id: u1
  content_length: 3
  content:
    - type: file-mention
      path: src/foo.ts
    - type: text
      text: " and again "
    - type: file-mention
      path: src/foo.ts
  status: ~
  streaming: ~
