src-tauri/tests/snapshots/pipeline_scenarios__user_question_row_renders_answered_card.snap
---
source: tests/pipeline_scenarios.rs
expression: run_normalized(msgs)
---
- role: assistant
  id: msg-1
  content_length: 1
  content:
    - type: user-question
      id: codex-input-1
      source: Codex
      status: answered
      questions:
        - "Apply the patch? [Yes|No]"
      answers:
        - Apply the patch? => Yes
  status: ~
  streaming: ~
